修改一些规范问题。